The awesome menu was greatly improved. :)